fixed work padding on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -489,7 +489,7 @@ body {
     @media only screen and (max-width: 400px) {
         .inner-work {
             padding-top: 0;
-            padding-bottom: 0;
+            padding-bottom: 5%;
         }
     }
 
